bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:2: error: type mismatch;
 found   : Int
 required: Boolean
  if(n+10> 100 > n-10 || n+10> 200 >n-10){
                  ^NearHundred:2: error: type mismatch;
 found   : Int
 required: Boolean
  if(n+10> 100 > n-10 || n+10> 200 >n-10){
                                     ^