bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  if(n+10> 100 > n-10 || n+10> 200 >n-10){
    return true
  }
  else{
    return false
  }
}